# femdaq

./: .pre-commit-config.yaml  CMakeLists.txt  README.md  femdaqROOT.cxx  main.cxx
.github/workflows/: validation.yml
cmake/: FindReadline.cmake  thisFEMDAQ.cmake
config/: AlphaCAMM.dec  IAXOD1FEM.dec  TREXDM.dec  template.cfg
daq/: ARCPacket.cxx  ARCPacket.h  CommandFetcher.cxx  CommandFetcher.h  DCCPacket.cxx  DCCPacket.h  FEMDAQ.cxx  FEMDAQ.h  FEMDAQARC.cxx  FEMDAQARC.h  FEMDAQARCFEM.cxx  FEMDAQARCFEM.h  FEMDAQDCC.cxx  FEMDAQDCC.h  FEMINOSPacket.cxx  FEMINOSPacket.h  FEMProxy.h  FEMSocket.cxx  FEMSocket.h  PrometheusManager.cxx  PrometheusManager.h  RunConfig.cxx  RunConfig.h  SignalEvent.h  TCM.cxx  TCM.h
macros/: AnalyzePulses.C  DrawPulses.C  EventDisplay.C
